parser/img_parser.go
// Generated from Img.g4 by ANTLR 4.7.

package parser // Img

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "'png'", "'jpg'", "'crop'", "'rotate'", "'flipX'", "'flipY'", "'resize'",
	"'brightness'", "'contrast'", "'saturation'", "'pixelate'", "'save'", "'='",
	"'.'", "','", "'\"'", "';'", "'('", "')'", "'[]'", "'open'",
}
var symbolicNames = []string{
	"", "", "", "", "", "", "", "", "", "", "", "", "", "ASSIGN", "DOT", "COMMA",
	"APOS", "SEMICOLON", "OPEN_PARAN", "CLOSED_PARAN", "FOLDER", "OPEN", "NUMBER",
	"ID", "WHITESPACE",
}

var ruleNames = []string{
	"start", "declaration", "openFile", "openFolder", "fileName", "imageType",
	"folderName", "action_", "actionType", "crop", "rotate", "flipX", "flipY",
	"resize", "brightness", "contrast", "saturation", "pixelate", "export",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type ImgParser struct {
	*antlr.BaseParser
}

func NewImgParser(input antlr.TokenStream) *ImgParser {
	this := new(ImgParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "Img.g4"

	return this
}

// ImgParser tokens.
const (
	ImgParserEOF          = antlr.TokenEOF
	ImgParserT__0         = 1
	ImgParserT__1         = 2
	ImgParserT__2         = 3
	ImgParserT__3         = 4
	ImgParserT__4         = 5
	ImgParserT__5         = 6
	ImgParserT__6         = 7
	ImgParserT__7         = 8
	ImgParserT__8         = 9
	ImgParserT__9         = 10
	ImgParserT__10        = 11
	ImgParserT__11        = 12
	ImgParserASSIGN       = 13
	ImgParserDOT          = 14
	ImgParserCOMMA        = 15
	ImgParserAPOS         = 16
	ImgParserSEMICOLON    = 17
	ImgParserOPEN_PARAN   = 18
	ImgParserCLOSED_PARAN = 19
	ImgParserFOLDER       = 20
	ImgParserOPEN         = 21
	ImgParserNUMBER       = 22
	ImgParserID           = 23
	ImgParserWHITESPACE   = 24
)

// ImgParser rules.
const (
	ImgParserRULE_start       = 0
	ImgParserRULE_declaration = 1
	ImgParserRULE_openFile    = 2
	ImgParserRULE_openFolder  = 3
	ImgParserRULE_fileName    = 4
	ImgParserRULE_imageType   = 5
	ImgParserRULE_folderName  = 6
	ImgParserRULE_action_     = 7
	ImgParserRULE_actionType  = 8
	ImgParserRULE_crop        = 9
	ImgParserRULE_rotate      = 10
	ImgParserRULE_flipX       = 11
	ImgParserRULE_flipY       = 12
	ImgParserRULE_resize      = 13
	ImgParserRULE_brightness  = 14
	ImgParserRULE_contrast    = 15
	ImgParserRULE_saturation  = 16
	ImgParserRULE_pixelate    = 17
	ImgParserRULE_export      = 18
)

// IStartContext is an interface to support dynamic dispatch.
type IStartContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsStartContext differentiates from other interfaces.
	IsStartContext()
}

type StartContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStartContext() *StartContext {
	var p = new(StartContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = ImgParserRULE_start
	return p
}

func (*StartContext) IsStartContext() {}

func NewStartContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StartContext {
	var p = new(StartContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = ImgParserRULE_start

	return p
}

func (s *StartContext) GetParser() antlr.Parser { return s.parser }

func (s *StartContext) EOF() antlr.TerminalNode {
	return s.GetToken(ImgParserEOF, 0)
}

func (s *StartContext) AllDeclaration() []IDeclarationContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IDeclarationContext)(nil)).Elem())
	var tst = make([]IDeclarationContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IDeclarationContext)
		}
	}

	return tst
}

func (s *StartContext) Declaration(i int) IDeclarationContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDeclarationContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IDeclarationContext)
}

func (s *StartContext) AllAction_() []IAction_Context {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IAction_Context)(nil)).Elem())
	var tst = make([]IAction_Context, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IAction_Context)
		}
	}

	return tst
}

func (s *StartContext) Action_(i int) IAction_Context {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IAction_Context)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IAction_Context)
}

func (s *StartContext) AllExport() []IExportContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IExportContext)(nil)).Elem())
	var tst = make([]IExportContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IExportContext)
		}
	}

	return tst
}

func (s *StartContext) Export(i int) IExportContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExportContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IExportContext)
}

func (s *StartContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StartContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StartContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ImgListener); ok {
		listenerT.EnterStart(s)
	}
}

func (s *StartContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ImgListener); ok {
		listenerT.ExitStart(s)
	}
}

func (p *ImgParser) Start() (localctx IStartContext) {
	localctx = NewStartContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, ImgParserRULE_start)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(39)
	p.GetErrorHandler().Sync(p)
	_alt = 1
	for ok := true; ok; ok = _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		switch _alt {
		case 1:
			{
				p.SetState(38)
				p.Declaration()
			}

		default:
			panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		}

		p.SetState(41)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 0, p.GetParserRuleContext())
	}
	p.SetState(46)
	p.GetErrorHandler().Sync(p)
	_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 1, p.GetParserRuleContext())

	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			{
				p.SetState(43)
				p.Action_()
			}

		}
		p.SetState(48)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 1, p.GetParserRuleContext())
	}
	p.SetState(50)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = _la == ImgParserID {
		{
			p.SetState(49)
			p.Export()
		}

		p.SetState(52)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(54)
		p.Match(ImgParserEOF)
	}

	return localctx
}

// IDeclarationContext is an interface to support dynamic dispatch.
type IDeclarationContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsDeclarationContext differentiates from other interfaces.
	IsDeclarationContext()
}

type DeclarationContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDeclarationContext() *DeclarationContext {
	var p = new(DeclarationContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = ImgParserRULE_declaration
	return p
}

func (*DeclarationContext) IsDeclarationContext() {}

func NewDeclarationContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DeclarationContext {
	var p = new(DeclarationContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = ImgParserRULE_declaration

	return p
}

func (s *DeclarationContext) GetParser() antlr.Parser { return s.parser }

func (s *DeclarationContext) OpenFile() IOpenFileContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IOpenFileContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IOpenFileContext)
}

func (s *DeclarationContext) OpenFolder() IOpenFolderContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IOpenFolderContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IOpenFolderContext)
}

func (s *DeclarationContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DeclarationContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DeclarationContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ImgListener); ok {
		listenerT.EnterDeclaration(s)
	}
}

func (s *DeclarationContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ImgListener); ok {
		listenerT.ExitDeclaration(s)
	}
}

func (p *ImgParser) Declaration() (localctx IDeclarationContext) {
	localctx = NewDeclarationContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, ImgParserRULE_declaration)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(58)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 3, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(56)
			p.OpenFile()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(57)
			p.OpenFolder()
		}

	}

	return localctx
}

// IOpenFileContext is an interface to support dynamic dispatch.
type IOpenFileContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsOpenFileContext differentiates from other interfaces.
	IsOpenFileContext()
}

type OpenFileContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyOpenFileContext() *OpenFileContext {
	var p = new(OpenFileContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = ImgParserRULE_openFile
	return p
}

func (*OpenFileContext) IsOpenFileContext() {}

func NewOpenFileContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *OpenFileContext {
	var p = new(OpenFileContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = ImgParserRULE_openFile

	return p
}

func (s *OpenFileContext) GetParser() antlr.Parser { return s.parser }

func (s *OpenFileContext) ID() antlr.TerminalNode {
	return s.GetToken(ImgParserID, 0)
}

func (s *OpenFileContext) ASSIGN() antlr.TerminalNode {
	return s.GetToken(ImgParserASSIGN, 0)
}

func (s *OpenFileContext) OPEN() antlr.TerminalNode {
	return s.GetToken(ImgParserOPEN, 0)
}

func (s *OpenFileContext) OPEN_PARAN() antlr.TerminalNode {
	return s.GetToken(ImgParserOPEN_PARAN, 0)
}

func (s *OpenFileContext) FileName() IFileNameContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IFileNameContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IFileNameContext)
}

func (s *OpenFileContext) CLOSED_PARAN() antlr.TerminalNode {
	return s.GetToken(ImgParserCLOSED_PARAN, 0)
}

func (s *OpenFileContext) SEMICOLON() antlr.TerminalNode {
	return s.GetToken(ImgParserSEMICOLON, 0)
}

func (s *OpenFileContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *OpenFileContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *OpenFileContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ImgListener); ok {
		listenerT.EnterOpenFile(s)
	}
}

func (s *OpenFileContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ImgListener); ok {
		listenerT.ExitOpenFile(s)
	}
}

func (p *ImgParser) OpenFile() (localctx IOpenFileContext) {
	localctx = NewOpenFileContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, ImgParserRULE_openFile)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(60)
		p.Match(ImgParserID)
	}
	{
		p.SetState(61)
		p.Match(ImgParserASSIGN)
	}
	{
		p.SetState(62)
		p.Match(ImgParserOPEN)
	}
	{
		p.SetState(63)
		p.Match(ImgParserOPEN_PARAN)
	}
	{
		p.SetState(64)
		p.FileName()
	}
	{
		p.SetState(65)
		p.Match(ImgParserCLOSED_PARAN)
	}
	{
		p.SetState(66)
		p.Match(ImgParserSEMICOLON)
	}

	return localctx
}

// IOpenFolderContext is an interface to support dynamic dispatch.
type IOpenFolderContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsOpenFolderContext differentiates from other interfaces.
	IsOpenFolderContext()
}

type OpenFolderContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyOpenFolderContext() *OpenFolderContext {
	var p = new(OpenFolderContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = ImgParserRULE_openFolder
	return p
}

func (*OpenFolderContext) IsOpenFolderContext() {}

func NewOpenFolderContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *OpenFolderContext {
	var p = new(OpenFolderContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = ImgParserRULE_openFolder

	return p
}

func (s *OpenFolderContext) GetParser() antlr.Parser { return s.parser }

func (s *OpenFolderContext) ID() antlr.TerminalNode {
	return s.GetToken(ImgParserID, 0)
}

func (s *OpenFolderContext) FOLDER() antlr.TerminalNode {
	return s.GetToken(ImgParserFOLDER, 0)
}

func (s *OpenFolderContext) ASSIGN() antlr.TerminalNode {
	return s.GetToken(ImgParserASSIGN, 0)
}

func (s *OpenFolderContext) OPEN() antlr.TerminalNode {
	return s.GetToken(ImgParserOPEN, 0)
}

func (s *OpenFolderContext) OPEN_PARAN() antlr.TerminalNode {
	return s.GetToken(ImgParserOPEN_PARAN, 0)
}

func (s *OpenFolderContext) FolderName() IFolderNameContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IFolderNameContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IFolderNameContext)
}

func (s *OpenFolderContext) CLOSED_PARAN() antlr.TerminalNode {
	return s.GetToken(ImgParserCLOSED_PARAN, 0)
}

func (s *OpenFolderContext) SEMICOLON() antlr.TerminalNode {
	return s.GetToken(ImgParserSEMICOLON, 0)
}

func (s *OpenFolderContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *OpenFolderContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *OpenFolderContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ImgListener); ok {
		listenerT.EnterOpenFolder(s)
	}
}

func (s *OpenFolderContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ImgListener); ok {
		listenerT.ExitOpenFolder(s)
	}
}

func (p *ImgParser) OpenFolder() (localctx IOpenFolderContext) {
	localctx = NewOpenFolderContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, ImgParserRULE_openFolder)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(68)
		p.Match(ImgParserID)
	}
	{
		p.SetState(69)
		p.Match(ImgParserFOLDER)
	}
	{
		p.SetState(70)
		p.Match(ImgParserASSIGN)
	}
	{
		p.SetState(71)
		p.Match(ImgParserOPEN)
	}
	{
		p.SetState(72)
		p.Match(ImgParserOPEN_PARAN)
	}
	{
		p.SetState(73)
		p.FolderName()
	}
	{
		p.SetState(74)
		p.Match(ImgParserCLOSED_PARAN)
	}
	{
		p.SetState(75)
		p.Match(ImgParserSEMICOLON)
	}

	return localctx
}

// IFileNameContext is an interface to support dynamic dispatch.
type IFileNameContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsFileNameContext differentiates from other interfaces.
	IsFileNameContext()
}

type FileNameContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFileNameContext() *FileNameContext {
	var p = new(FileNameContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = ImgParserRULE_fileName
	return p
}

func (*FileNameContext) IsFileNameContext() {}

func NewFileNameContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FileNameContext {
	var p = new(FileNameContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = ImgParserRULE_fileName

	return p
}

func (s *FileNameContext) GetParser() antlr.Parser { return s.parser }

func (s *FileNameContext) AllAPOS() []antlr.TerminalNode {
	return s.GetTokens(ImgParserAPOS)
}

func (s *FileNameContext) APOS(i int) antlr.TerminalNode {
	return s.GetToken(ImgParserAPOS, i)
}

func (s *FileNameContext) ID() antlr.TerminalNode {
	return s.GetToken(ImgParserID, 0)
}

func (s *FileNameContext) DOT() antlr.TerminalNode {
	return s.GetToken(ImgParserDOT, 0)
}

func (s *FileNameContext) ImageType() IImageTypeContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IImageTypeContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IImageTypeContext)
}

func (s *FileNameContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FileNameContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *FileNameContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ImgListener); ok {
		listenerT.EnterFileName(s)
	}
}

func (s *FileNameContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ImgListener); ok {
		listenerT.ExitFileName(s)
	}
}

func (p *ImgParser) FileName() (localctx IFileNameContext) {
	localctx = NewFileNameContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, ImgParserRULE_fileName)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(77)
		p.Match(ImgParserAPOS)
	}
	{
		p.SetState(78)
		p.Match(ImgParserID)
	}
	{
		p.SetState(79)
		p.Match(ImgParserDOT)
	}
	{
		p.SetState(80)
		p.ImageType()
	}
	{
		p.SetState(81)
		p.Match(ImgParserAPOS)
	}

	return localctx
}

// IImageTypeContext is an interface to support dynamic dispatch.
type IImageTypeContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsImageTypeContext differentiates from other interfaces.
	IsImageTypeContext()
}

type ImageTypeContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyImageTypeContext() *ImageTypeContext {
	var p = new(ImageTypeContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = ImgParserRULE_imageType
	return p
}

func (*ImageTypeContext) IsImageTypeContext() {}

func NewImageTypeContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ImageTypeContext {
	var p = new(ImageTypeContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = ImgParserRULE_imageType

	return p
}

func (s *ImageTypeContext) GetParser() antlr.Parser { return s.parser }
func (s *ImageTypeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ImageTypeContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ImageTypeContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ImgListener); ok {
		listenerT.EnterImageType(s)
	}
}

func (s *ImageTypeContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ImgListener); ok {
		listenerT.ExitImageType(s)
	}
}

func (p *ImgParser) ImageType() (localctx IImageTypeContext) {
	localctx = NewImageTypeContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, ImgParserRULE_imageType)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(83)
	_la = p.GetTokenStream().LA(1)

	if !(_la == ImgParserT__0 || _la == ImgParserT__1) {
		p.GetErrorHandler().RecoverInline(p)
	} else {
		p.GetErrorHandler().ReportMatch(p)
		p.Consume()
	}

	return localctx
}

// IFolderNameContext is an interface to support dynamic dispatch.
type IFolderNameContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsFolderNameContext differentiates from other interfaces.
	IsFolderNameContext()
}

type FolderNameContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFolderNameContext() *FolderNameContext {
	var p = new(FolderNameContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = ImgParserRULE_folderName
	return p
}

func (*FolderNameContext) IsFolderNameContext() {}

func NewFolderNameContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FolderNameContext {
	var p = new(FolderNameContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = ImgParserRULE_folderName

	return p
}

func (s *FolderNameContext) GetParser() antlr.Parser { return s.parser }

func (s *FolderNameContext) AllAPOS() []antlr.TerminalNode {
	return s.GetTokens(ImgParserAPOS)
}

func (s *FolderNameContext) APOS(i int) antlr.TerminalNode {
	return s.GetToken(ImgParserAPOS, i)
}

func (s *FolderNameContext) ID() antlr.TerminalNode {
	return s.GetToken(ImgParserID, 0)
}

func (s *FolderNameContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FolderNameContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *FolderNameContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ImgListener); ok {
		listenerT.EnterFolderName(s)
	}
}

func (s *FolderNameContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ImgListener); ok {
		listenerT.ExitFolderName(s)
	}
}

func (p *ImgParser) FolderName() (localctx IFolderNameContext) {
	localctx = NewFolderNameContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 12, ImgParserRULE_folderName)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(85)
		p.Match(ImgParserAPOS)
	}
	{
		p.SetState(86)
		p.Match(ImgParserID)
	}
	{
		p.SetState(87)
		p.Match(ImgParserAPOS)
	}

	return localctx
}

// IAction_Context is an interface to support dynamic dispatch.
type IAction_Context interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsAction_Context differentiates from other interfaces.
	IsAction_Context()
}

type Action_Context struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyAction_Context() *Action_Context {
	var p = new(Action_Context)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = ImgParserRULE_action_
	return p
}

func (*Action_Context) IsAction_Context() {}

func NewAction_Context(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Action_Context {
	var p = new(Action_Context)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = ImgParserRULE_action_

	return p
}

func (s *Action_Context) GetParser() antlr.Parser { return s.parser }

func (s *Action_Context) ID() antlr.TerminalNode {
	return s.GetToken(ImgParserID, 0)
}

func (s *Action_Context) DOT() antlr.TerminalNode {
	return s.GetToken(ImgParserDOT, 0)
}

func (s *Action_Context) ActionType() IActionTypeContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IActionTypeContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IActionTypeContext)
}

func (s *Action_Context) SEMICOLON() antlr.TerminalNode {
	return s.GetToken(ImgParserSEMICOLON, 0)
}

func (s *Action_Context) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Action_Context) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}
